# legion-aaas

./: .env.example  .gitignore  AGENTS.md  README.md  agent.py  chat.py  main.py  pyproject.toml  swarm.py
aaas/: __init__.py  artifacts.py  github_tools.py  llm.py  memory.py  packs.py  project_config.py  providers.py  reader.py  skill_library.py  skills.py  swarm.py  workflows.py
web/: package-lock.json  package.json  tailwind.config.ts
web/src/app/: globals.css  layout.tsx
web/src/app/(marketing)/: layout.tsx  page.tsx
web/src/app/control-plane/: page.tsx
web/src/app/docs/: layout.tsx
web/src/app/docs/configuration/: page.tsx
web/src/app/docs/control-plane/: page.tsx
web/src/app/docs/getting-started/: page.tsx
web/src/app/docs/how-it-works/: page.tsx
web/src/app/docs/integrations/: page.tsx
web/src/app/docs/integrations/cicd/: page.tsx
web/src/app/docs/integrations/discord/: page.tsx
web/src/app/docs/integrations/github/: page.tsx
web/src/app/docs/integrations/google-meet/: page.tsx
web/src/app/docs/integrations/slack/: page.tsx
web/src/app/docs/self-hosting/: page.tsx
web/src/app/docs/skills/: page.tsx
web/src/app/docs/swarm/: page.tsx
web/src/components/docs/: sidebar-nav.tsx
web/src/components/marketing/: code-showcase.tsx  cta-banner.tsx  features-grid.tsx  hero.tsx  how-it-works.tsx  integrations-strip.tsx  site-footer.tsx  site-header.tsx  terminal-demo.tsx
web/src/components/motion/: reveal.tsx
web/src/components/ui/: button.tsx  sheet.tsx
web/src/lib/: nav-config.ts
